assets/sass/base.scss
body {
   font-family: "Graphik", "Helvetica Neue", Helvetica, sans-serif;
	line-height: 1;
	color: #555555;
	background: #FFFFFF;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}



/* Layouts */

.container {
   width: 960px;
   margin: 0 auto;
   position: relative;
   overflow: hidden;
}

.section {
   padding: 150px 0;
   border-bottom: 1px solid #E8E8E8;
}

   .section .container::before {
      font-size: 16px;
      line-height: 16px;
      background: #FFFFFF;
      position: absolute;
      top: -158px;
      left: -16px;
      padding: 0 16px;
      color: #C3C3C3;
   }

      .section.work .container::before { content: "Featured Work"; }
      .section.profile .container::before { content: "Profile"; }



/* Intro */

.user-gist {
   margin: 0;
   padding: 0 0 80px 52px;
   position: relative;
}

   .user-gist .icon-symbol {
      width: 40px;
      height: 40px;
      background: url('../images/icon-symbol.png') top left no-repeat;
      background-size: 40px 40px;
      position: absolute;
      top: 0;
      left: 0;
   }

   .user-gist h3.fullname {
      font-size: 18px;
      line-height: 18px;
      font-weight: 500;
      color: #252525;
      padding: 3px 0 2px 0;
   }

   .user-gist p.designation {
      font-size: 16px;
      line-height: 16px;
      font-family: 400;
      color: #959595;
   }

.user-blurb {
   margin: 0;
   padding: 0;
}

   .user-blurb .currently {
      font-size: 42px;
      line-height: 56px;
      color: #252525;
      padding-bottom: 40px;
   }

   .user-blurb .previously {
      font-size: 14px;
      line-height: 14px;
      color: #757575;
   }

      .user-blurb .previously strong {
         text-transform: uppercase;
         font-weight: 600;
         padding-right: 15px;
      }



/* Featured Work */

ul.featured-work {
   margin: 0;
   padding: 0;
   overflow: hidden;
}

   ul.featured-work li {
      width: 460px;
      margin: 0 40px 60px 0;
      float: left;
   }

      ul.featured-work li:nth-child(2n+2) { margin: 0 0 60px 0; }
      ul.featured-work li:nth-last-child(2) { margin: 0 40px 0 0; }
      ul.featured-work li:last-child { margin: 0; }

      ul.featured-work li .thumb,
      ul.featured-work li .thumb > img {
         width: 460px;
         height: 320px;
         background: #EFEFEF;
      }

      ul.featured-work li .meta {
         padding: 40px 0 0 0;
      }

         ul.featured-work li .meta h4.title {
            font-size: 18px;
            line-height: 18px;
            font-weight: 500;
            color: #252525;
            padding: 0 0 8px 0;
         }

         ul.featured-work li .meta p.description {
            font-size: 16px;
            line-height: 20px;
            font-weight: 400;
            color: #555555;
            padding: 0 50px 25px 0;
         }

         ul.featured-work li .meta span.links {
            display: block;
            font-size: 14px;
            line-height: 14px;
            color: #959595;
         }



/* Profile */

.bio {
   width: 460px;
   float: left;
}

   .bio > h4 {
      font-size: 18px;
      line-height: 30px;
      font-weight: 500;
      padding: 0 0 40px 0;
   }

   .bio > p {
      font-size: 16px;
      line-height: 28px;
      padding: 0 0 40px 0;
   }

      .bio > p:last-child {
         padding: 0;
      }

